@@ -1,4 +1,4 @@
 SUBDIRS = libdca libao src test include
-DIST_SUBDIRS = $(SUBDIRS) autotools debian vc++
+DIST_SUBDIRS = $(SUBDIRS) autotools vc++
 
 EXTRA_DIST = bootstrap doc/libdca.txt
