@@ -1,20 +1,0 @@
-Source: libdts
-Section: libs
-Priority: optional
-Maintainer: Sam Hocevar (Debian packages) <sam+deb@zoy.org>
-Build-Depends: debhelper (>= 4.0)
-Standards-Version: 3.6.1.0
-
-Package: libdts-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends}
-Description: development files for libdts
- libdts provides a low-level interface to decode audio frames encoded using
- DTS Coherent Acoustics. DTS Coherent Acoustics streams are commonly found
- on DVDs, DTS audio CDs and some radio broadcastings. libdts also provides
- downmixing and dynamic range compression for various output configurations.
- .
- This package contains the headers and static libraries used to build
- applications that use libdts.
-
